--- a/templates/ddash/graph_environment_sensorstatus.j2
+++ b/templates/ddash/graph_environment_sensorstatus.j2
@@ -69,5 +69,6 @@
   "links": [],
   "showDistinctCount": false,
   "showLegendTime": false,
-  "showTransitionCount": false
+  "showTransitionCount": false,
+  "expandFromQueryS": {{ discovery_interval }}
 }
