--- a/templates/ddash/graph_video_broadcast.j2
+++ b/templates/ddash/graph_video_broadcast.j2
@@ -83,5 +83,6 @@
   "showTransitionCount": false,
   "showLegendTime": true,
   "showLegendCounts": false,
-  "showDistinctCount": false
+  "showDistinctCount": false,
+  "expandFromQueryS": {{ discovery_interval }}
 }
