--- a/templates/ddash/graph_video_record.j2
+++ b/templates/ddash/graph_video_record.j2
@@ -83,5 +83,6 @@
   ],
   "datasource": null,
   "lineColor": "rgba(128, 128, 128, 1.0)",
-  "display": "timeline"
+  "display": "timeline",
+  "expandFromQueryS": {{ discovery_interval }}
 }
